Fix button stuck in hover iOS

--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body {
     font-family: 'Manrope', sans-serif;
     flex-direction: column;
     justify-content: center;
+    padding: 0 1rem;
     min-height: 100vh;
 }
 
@@ -42,7 +43,6 @@ main {
     flex-direction: column;
     gap: 1.5rem;
     font-weight: 900;
-    margin: 0 1rem;
     height: var(--main-height);
     max-height: 332px;
     max-width: 540px;
@@ -87,7 +87,7 @@ h1 {
     width: 64px;
 }
 
-.die-btn:hover, .die-btn:active {
+.die-btn:active {
     box-shadow: 0 0 40px 0 var(--color-neon-green);
 }
 
@@ -107,6 +107,13 @@ h1 {
 
 .changing {
     opacity: 0;
+}
+
+/* fix on iOS button stuck in hover state */
+@media (hover:hover) {
+    .die-btn:hover, .die-btn:active {
+        box-shadow: 0 0 40px 0 var(--color-neon-green);
+    }
 }
 
 @media screen and (min-width: 501px) {
